# alco

./: .env.example  Cargo.toml  README.md
bins/app/: Cargo.toml
bins/app/src/: main.rs
bins/app/src/application/: configure.rs  mod.rs
bins/app/src/application/web_app/: mod.rs  web_app_main.rs
bins/app/src/application/web_app/add_feature/: add_feature.rs  mod.rs
bins/app/src/application/web_app/add_feature/constants/: contract_rs.rs  data_rs.rs  domain_rs.rs  handle_rs.rs  infrastructure_rs.rs  mod.rs  setup_rs.rs
bins/app/src/application/web_app/add_feature/service/: add_feature_code.rs  mod.rs  update_app_mod.rs  update_configure.rs
bins/app/src/application/web_app/setup/: mod.rs  setup_project.rs
bins/app/src/application/web_app/setup/constants/: mod.rs
bins/app/src/application/web_app/setup/constants/bins/: cargo_toml.rs  configure_rs.rs  main_rs.rs  mod.rs  web_rs.rs
bins/app/src/application/web_app/setup/constants/docs/: index_ts.rs  mod.rs  package_json.rs  tsconfig_json.rs
bins/app/src/application/web_app/setup/constants/docs/components/: responses.rs
bins/app/src/application/web_app/setup/constants/docs/paths/: health_check_ts.rs  (+1 more)
bins/app/src/application/web_app/setup/constants/general/: cargo_toml.rs  docker_compose_yml.rs  env.rs  gitignore.rs  mod.rs  package_json.rs
bins/app/src/application/web_app/setup/constants/libs/: mod.rs
bins/app/src/application/web_app/setup/service/: mod.rs  setup_bins.rs  setup_docs.rs  setup_general.rs
bins/app/src/application/web_app/setup/service/setup_libs/: config.rs  error.rs  infrastructure.rs  mod.rs  support.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
libs/support/: Cargo.toml
libs/support/src/: lib.rs
libs/support/src/helpers/: base_url.rs  find_directory.rs  http.rs  mod.rs  text_case_converters.rs
libs/support/src/store/models/: alco_command.rs  mod.rs
(+19 files in other folders)
