[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
config = { path = "../../libs/config" }
error = { path = "../../libs/error" }
support = { path = "../../libs/support" }

# helpers
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
strum = "0.26.2"
strum_macros = "0.26.2"
regex = "*"
env_logger = "*"

# serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# errors
thiserror = "1.0.56"

# Http stuff
actix-web = "4.3.1"