[package]
name = "error"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
doctest = false

[dependencies]

# serde
serde = "1.0"
serde_json = "^1.0.0"

#helpers
validr = "0.3.0"
thiserror = "1.0.56"
lettre = "0.11.4"
tokio = { version = "1.36.0", features = ["full"] }
regex = "*"


